css/main.css
/* ... */
/* projects sections */

.mobileContainer {
    background-color: var(--white);
    padding: 0 10px 80.8px 10px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.mainProjLayout {
    margin: 1rem;
    display: flex;
    flex-direction: column;
    row-gap: 1.4rem;  
    width: -moz-available;          /* For Mozzila */
    width: -webkit-fill-available;  /* For Chrome and Safari */
    width: fill-available;          /* For Edge and Internet Explorer */
}

.proj-overview {
    display: flex;
    height: 100%;
    flex-wrap: wrap;
    justify-content: space-between;
    flex-direction: column;
    gap: 0.8rem;
    font-weight: 600;
    font-size: 1.2em;
    line-height: 1.3;
    margin: 1rem 0;
}

.projItem {
    display: block;
    text-decoration: none;
}

.projImgCol {
    position: relative;
    overflow: hidden;
    aspect-ratio: 1.78 / 1;
    border-radius: 12px;
    border: solid 3px rgb(0, 0, 0);
    border-bottom-width: 5px;
}

.projImgCol img {
    width: 100%;
    background-size: cover;
    position: relative;
    inset: 0px;
    height: 100%;
    object-fit: cover;
    image-rendering: auto;
}

/* Zoom In Hover effect for images */
.projImgCol img {
	-webkit-transform: scale(1);
	transform: scale(1);
	-webkit-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
}

.projImgCol:hover img {
	-webkit-transform: scale(1.08);
	transform: scale(1.08);
}

.projIntro {
    margin-top: 1rem;
    display: flex;
    align-items: end;
    justify-content: space-between;
    font-size: 0.9em;
    color: #000;
    font-weight: 400;
}

.projIntro h2 {
    font-weight: 600;
    font-size: 1.2em;
}

.projects-btn {
    display: flex;
    justify-content: center;
    margin-top: 10px;
    margin-bottom: 1rem;
    align-items: center;
    text-decoration: none;
    font-size: 1.2em;
    font-weight: 600;
    color: #000;
    border: solid;
    border-radius: 5px;
    padding: 0.7rem;
}

.projects-btn:hover {
    background-color: var(--hover-color);
    transition: background-color 0.3s ease;
}

.work-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 1rem;
}

.projects-btn .icon img {
    max-width: 100%;
    height: auto;
}

/* ABOUT SECTION */

.about-container {
    display: flex;
    flex-direction: column;
    row-gap: 0.8rem;
    margin: 1rem 2rem;
    padding-bottom: 70.8px;
    justify-content: space-between;
}


.identity,
.skills {
    flex: 1;
    margin: 0 1rem;
}

.identity p a:nth-child(1) {
    background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #d6ea00, #f9a825, #ff5722);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: 700;
    text-decoration: underline;
}

.identity p a:nth-child(2) {
    background: linear-gradient(to right, #562f22, #cc4e33, #7a8a84, #86a662, #562f22);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: 700;
    text-decoration: underline;
}

.profilepic-container {
    margin: 0 auto;
    padding: 1rem 2rem;
    margin: auto;
    display: flex;
    max-width: 322px;
}

.profilepic-container img {
    object-fit: cover;
    border-radius: 25px;
}

.about-text-container h2 {
    font-size: 1.3em;
    margin-bottom: 1rem;
    font-weight: 700;
}

.about-text-container p,
.about-text-container li {
    line-height: 1.5;
    font-size: 1em;
    font-weight: 600;
}

.skills h2,
.skills ul {
    margin-top: 1rem;
}

.skills li {
    list-style-type: disc;
    margin-left: 0.8rem;
}
    
    
    
/* ############ Mobile footer Nav ############  */

.MobileNavFixed {
    position: fixed;
    left: 0px;
    right: 0px;
    bottom: 0px;
    z-index: 10;
    display: flex;
    border-top: solid;
    padding: 0px;
    background-color: var(--white);
}

.menuIcon {
    display: flex;
    flex-shrink: 0;
    -moz-box-align: center;
    align-items: center;
    justify-content: center;
    border-right-width: 2px;
    padding: 0.8rem;
    border-right: solid;
}

.icon {
    height: 1.2rem;
    width: 2rem;
    display: inline-block;
    background-color: transparent;
}

.icon-close {
    display: none;
}

.MobileMenu {
    display: none;
}

.MobileMenu.open {
    display: block;
}

.MobileMenu.open .icon-burger {
    display: none; 
}
    
.MobileMenu.open .icon-close {
    display: inline; 
}

.logoHome {
    margin-left: auto;
    padding: 0.8rem;
    display: flex;
}

.MobileMenu {
    bottom: 70.8px;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 12;
    overflow-y: auto;
    border-width: 2px;
    opacity: 1;
    background-color: var(--white);
    font-family: var(--body-copy);
    scrollbar-width: none;
}

.MobileMenuContainer {
    display: flex;
    height: 100%;
    flex-direction: column;
    position: relative;
}

.filter {
    color:#000;
    margin-bottom: 2rem;
    font-family: var(--body-copy);
}

.MobileMenuContainer li{
    padding: 0.8rem;
    border-top: solid;
    font-size: 1em;
    color: #000;
    font-weight: 700;
}

.MobileMenuContainer li a {
    width: 100%;
    justify-content: flex-start;
    font-size: 1.1em;
    color: #000;
}

.ProjectNav_s {
    display: flex;
    width: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 2rem;
    font-weight: 700;
    margin-top: auto;
}

.ProjectNav_Row_s {
    font-size: 1.5em;
    margin: 0 auto;
}

.ProjectNav_Row_s a {
    color: #000;
}

.links {
    padding: 0.8rem;
    font-size: 0.8em;
    line-height: 1.5;  
    bottom: 0;
    margin-top: auto;
}

.linksFootermobile {
    display: flex;
    flex-direction: column;
    row-gap: 0.4rem;
}

.MFooterGridRow {
    display: grid;
    grid-template-columns: repeat(3, minmax(0px, 1fr));
    column-gap: 0.8rem;
    font-size: 0.7500em;
    line-height: 2;
}
/* ... */

